--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Soa"
         tools:targetApi="31">
+        <meta-data
+            android:name="com.naver.maps.map.NCP_KEY_ID"
+            android:value="YOUR_NCP_KEY_ID_HERE" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
